--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ align-items: center;
 }
 }
 /* medium device */
-@media screen and (min-width:577px) and(max-width:800px{
+@media screen and (min-width:577px) and(max-width:800px){
      .container img{
           width:700px ;
           height:500px ;
